--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -96,8 +96,8 @@ nlu:
     - bác tên [Khoát](user_name)
     - [chị](user_title) là [Thu](user_name)
     - [chị](user_title) tên là [Diễm](user_name)
-    - [chị](user_title) tên [Một](user_name)
-    - [chị](user_title) tên [nhi](user_name)
+    - [chị](user_title) tên [Thùy](user_name)
+    - [chị](user_title) tên [Nhi](user_name)
     - [chú](user_title) là [Sa](user_name)
     - [chú](user_title) tên là [Dinh](user_name)
     - [chú](user_title) tên [Phi](user_name)
