--- a/data/rules.yml
+++ b/data/rules.yml
@@ -35,6 +35,7 @@ rules:
 - rule: gặp_chuyên_viên_tư_vấn_giải_pháp
   steps:
   - intent: gặp_chuyên_viên_tư_vấn_giải_pháp
+  - action: action_gate
   - action: action_explain_fill_form
   - action: email_form
   - active_loop: email_form
@@ -53,36 +54,42 @@ rules:
 - rule: tư_vấn_hệ_thống_trung_tâm_liên_lạc
   steps:
   - intent: tư_vấn_hệ_thống_trung_tâm_liên_lạc
+  - action: action_gate
   - action: utter_tư_vấn_hệ_thống_trung_tâm_liên_lạc
   
 # Tư vấn hệ thống cho doanh nghiệp
 - rule: tư_vấn_hệ_thống_trung_tâm_liên_lạc_cho_doanh_nghiệp
   steps:
   - intent: tư_vấn_hệ_thống_trung_tâm_liên_lạc_cho_doanh_nghiệp
+  - action: action_gate
   - action: action_handoff
 
 # Tư vấn hệ thống cho khách hàng
 - rule: tư_vấn_hệ_thống_trung_tâm_liên_lạc_cho_khách_hàng
   steps:
   - intent: tư_vấn_hệ_thống_trung_tâm_liên_lạc_cho_khách_hàng
+  - action: action_gate
   - action: action_handoff
 
 # Đánh giá các sản phẩm khác của ePacfic
 - rule: đánh_giá_các_sản_phẩm_khác_của_ePacific
   steps:
   - intent: đánh_giá_các_sản_phẩm_khác_của_ePacific
+  - action: action_gate
   - action: action_handoff
 
 # Khách hàng hiện hữu
 - rule: khách_hàng_hiện_hữu
   steps:
   - intent: khách_hàng_hiện_hữu
+  - action: action_gate
   - action: action_main
 
 # Hỗ trợ kỹ thuật sử dụng
 - rule: hỗ_trợ_kỹ_thuật_sử_dụng
   steps:
   - intent: hỗ_trợ_kỹ_thuật_sử_dụng
+  - action: action_gate
   - action: action_explain_fill_form
   - action: email_phone_form
   - active_loop: email_phone_form
@@ -101,12 +108,14 @@ rules:
 - rule: xử_lý_đơn_hàng_hoa_đơn
   steps:
   - intent: xử_lý_đơn_hàng_hoa_đơn  
+  - action: action_gate
   - action: action_main
 
 # Xử lý đơn hàng
 - rule: xử_lý_đơn_hàng
   steps:
   - intent: xử_lý_đơn_hàng
+  - action: action_gate
   - action: action_explain_fill_form
   - action: email_phone_form
   - active_loop: email_phone_form
@@ -125,6 +134,7 @@ rules:
 - rule: xử_lý_hóa_đơn
   steps:
   - intent: xử_lý_hóa_đơn
+  - action: action_gate
   - action: action_explain_fill_form
   - action: email_phone_form
   - active_loop: email_phone_form
@@ -143,12 +153,14 @@ rules:
 - rule: tìm_kiếm_thông_tin
   steps:
   - intent: tìm_kiếm_thông_tin
+  - action: action_gate
   - action: action_main
 
 # Đăng ký làm đối tác đại lý
 - rule: đăng_ký_làm_đại_lý
   steps:
   - intent: đăng_ký_làm_đại_lý
+  - action: action_gate
   - action: action_explain_fill_form
   - action: email_phone_website_form
   - active_loop: email_phone_website_form
