thêm tính năng hạn chế cuộc hội thoại

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1148,6 +1148,8 @@ nlu:
     - công ty của anh có website là [duocphamdonga.com.vn](user_website)
     - website của công ty chị [getfly.vn](user_website)
     - [vnvc.vn](user_website)
+    - [bigmouse.tk](user_website)
+    - [servertesting.tk](user_website)
 
 - intent: cung_cấp_mã_số_thuế_doanh_nghiệp
   examples: |
